--- a/frontend/components/common/SelectOperationalDay/styles.module.css
+++ b/frontend/components/common/SelectOperationalDay/styles.module.css
@@ -1,23 +1,34 @@
 /* * */
 /* SEGMENTED CONTROL DATE INPUT OVERRIDE */
 
-.segmentedControlDateInputOverride label {
+.segmentedControlDateInputOverrideControl label {
+	width: 100%;
 	padding-right: 35px;
 	padding-left: 35px;
 }
 
-.segmentedControlDateInputOverride:last-child label,
-.segmentedControlDateInputOverride[data-active="true"]:last-child label {
-	display: block;
+.segmentedControlDateInputOverrideControl:last-child label,
+.segmentedControlDateInputOverrideControl[data-active="true"]:last-child label {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
 	padding: 0;
+}
+
+/* * */
+/* DATE PICKER / WRAPPER */
+
+.datePickerWrapper {
+	--input-height-lg: unset;
 }
 
 /* * */
 /* DATE PICKER / INPUT */
 
 .datePickerInput {
-	min-width: 175px;
-	padding: var(--size-spacing-15) var(--size-spacing-15) var(--size-spacing-15) calc(var(--size-spacing-15) + 27px);
+	padding: calc(var(--size-spacing-15) - 15px) var(--size-spacing-15);
+	padding-left: calc(var(--size-spacing-15) + 30px);
 	font-size: 17px;
 	font-weight: var(--font-weight-semibold);
 	line-height: 1;
@@ -27,8 +38,15 @@
 	border: none;
 }
 
-.segmentedControlDateInputOverride[data-active="true"] .datePickerInput {
+.segmentedControlDateInputOverrideControl[data-active="true"] .datePickerInput {
 	color: var(--color-system-text-100);
+}
+
+@media screen and (width <= 500px) {
+	.datePickerInput {
+		padding-left: calc(var(--size-spacing-15) + 26px);
+		font-size: 14px;
+	}
 }
 
 /* * */
@@ -38,14 +56,20 @@
     display: flex;
 	align-items: center;
 	justify-content: center;
-	width: auto;
-	height: auto;
+	width: 24px;
+	aspect-ratio: 1/1;
 	padding-left: var(--size-spacing-10);
 	margin-top: -3px;
 	color: var(--color-system-text-300);
 	pointer-events: none;
 }
 
-.segmentedControlDateInputOverride[data-active="true"] .datePickerSection {
+.segmentedControlDateInputOverrideControl[data-active="true"] .datePickerSection {
 	color: var(--color-system-text-200);
+}
+
+@media screen and (width <= 500px) {
+	.datePickerSection svg {
+		width: 20px;
+	}
 }
