--- a/frontend/themes/_default/overrides/SegmentedControl.module.css
+++ b/frontend/themes/_default/overrides/SegmentedControl.module.css
@@ -3,15 +3,15 @@
 
 .root {
 	padding: 4px;
-	border-radius: 5px;
 	background-color: var(--color-system-background-300);
+	border-radius: 5px;
 }
 
 .root.variantWhite {
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: rgb(255 255 255 / 50%);
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (width <= 350px) {
 	.root {
 		flex-direction: column;
 	}
@@ -24,7 +24,13 @@
 /* * */
 /* CONTROL */
 
-@media screen and (max-width: 350px) {
+.control {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+@media screen and (width <= 350px) {
 	.control::before {
 		width: 100%;
 		height: 1px;
@@ -36,7 +42,7 @@
 
 .indicator {
 	background-color: var(--color-system-background-100);
-	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 5px 0 rgb(0 0 0 / 10%);
 }
 
 .indicator.variantWhite {
@@ -50,15 +56,15 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	line-height: 1;
+	padding: var(--size-spacing-15);
 	font-size: 17px;
 	font-weight: var(--font-weight-semibold);
+	line-height: 1;
 	color: var(--color-system-text-200);
-	padding: var(--size-spacing-15);
 	transition: all 300ms ease;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (width <= 500px) {
 	.label {
 		font-size: 14px;
 	}
@@ -66,6 +72,7 @@
 
 .label[data-active="true"] {
 	color: var(--color-system-text-100);
+
 	--sc-color: var(--color-system-background-100); /* Fix flashing before loading js */
 }
 
@@ -74,15 +81,17 @@
 }
 
 .label.variantWhite {
-	opacity: 0.65;
-	font-size: 14px;
 	padding: 7px 25px;
+	font-size: 14px;
 	color: var(--color-primary-black);
+	opacity: 0.65;
+
+	--sc-color: var(--color-primary-white); /* Fix flashing before loading js */
 }
 
 .label.variantWhite[data-active="true"] {
-	opacity: 1;
 	color: var(--color-primary-black);
+	opacity: 1;
 }
 
 /* * */
