--- a/frontend/themes/_default/overrides/SegmentedControl.module.css
+++ b/frontend/themes/_default/overrides/SegmentedControl.module.css
@@ -56,6 +56,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	width: 100%;
 	padding: var(--size-spacing-15);
 	font-size: 17px;
 	font-weight: var(--font-weight-semibold);
