--- a/frontend/components/stops/NextBuses/styles.module.css
+++ b/frontend/components/stops/NextBuses/styles.module.css
@@ -1,19 +1,20 @@
 .container{
   width:100%;
+  padding: var(--size-spacing-15);
 }
 
 
 .toggle {
   display: flex;
-  width: 100%;
-  padding: var(--size-xs);
   align-items: center;
   justify-content: center;
-  text-align: center;
+  width: 100%;
+  padding: var(--size-xs);
   font-size: 12px;
   font-weight: 600;
   color: var(--color-system-text-400);
-  border-radius: 999px;
+  text-align: center;
   cursor: pointer;
+  border-radius: 999px;
   transition: all 300ms ease;
 }
