--- a/frontend/components/stops/StopsDetailContentListRealtimeClockLine/styles.module.css
+++ b/frontend/components/stops/StopsDetailContentListRealtimeClockLine/styles.module.css
@@ -3,30 +3,30 @@
 
 .container {
   display: grid;
-  grid-template-columns: 8px 1fr auto;
   grid-template-rows: 8px;
-  width: 100%;
+  grid-template-columns: 8px 1fr auto;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 /* * */
 /* CIRCLE */
 
 .circle {
-  height: 100%;
   width: 100%;
+  height: 100%;
   aspect-ratio: 1;
-  border-radius: 999px;
   background-color: var(--color-alerts-3);
+  border-radius: 999px;
 }
 
 /* * */
 /* LINE */
 
 .line {
-  height: 2px;
   width: 100%;
+  height: 2px;
   background-color: var(--color-alerts-3);
   border-top-right-radius: 999px;
   border-bottom-right-radius: 999px;
@@ -44,12 +44,12 @@
 
 .time span {
   font-weight: 800;
-  animation: 2s blink step-start infinite;
+  animation: 2000ms blink step-start infinite;
 }
 
 @keyframes blink {
-  from,
-  to {
+  0%,
+  100% {
     opacity: 0.9;
   }
   50% {
