--- a/frontend/components/stores/StoresListToolbar/styles.module.css
+++ b/frontend/components/stores/StoresListToolbar/styles.module.css
@@ -10,3 +10,15 @@
 	width: 100%;
 	margin-bottom: var(--size-spacing-10);
 }
+
+.filters {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: var(--size-spacing-10);
+}
+
+@media screen and (min-width: 1023px) {
+	.filters {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
