--- a/frontend/components/layout/GridNavItem/styles.module.css
+++ b/frontend/components/layout/GridNavItem/styles.module.css
@@ -11,16 +11,18 @@
 	width: 100%;
 	padding: var(--size-spacing-30) var(--size-spacing-20);
 	color: var(--color-system-text-100);
-	background-color: var(--color-system-background-300);
 	border: 1px solid var(--color-system-border-100);
-	border-radius: 18px;
-	transition: all 200ms ease;
+
+	/* border-radius: 18px; */
+	/* background-color: var(--color-system-background-300); */
+	/* transition: all 200ms ease; */
 }
 
 .container:hover {
 	background-color: var(--color-system-background-200);
 	border-color: var(--color-system-border-200);
-	transform: scale(1.02);
+
+	/* transform: scale(1.02); */
 }
 
 .container:active {
