--- a/frontend/components/alerts/AlertsListToolbar/styles.module.css
+++ b/frontend/components/alerts/AlertsListToolbar/styles.module.css
@@ -6,3 +6,16 @@
 	flex-direction: column;
 	gap: var(--size-spacing-15);
 }
+
+.selectsWrapper {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: var(--size-spacing-15);
+}
+
+
+@media screen and (max-width: 768px) {
+	.selectsWrapper {
+		grid-template-columns: 1fr;
+	}
+}
