--- a/frontend/components/stops/StopsDetailContentTimetableSkeleton/styles.module.css
+++ b/frontend/components/stops/StopsDetailContentTimetableSkeleton/styles.module.css
@@ -5,6 +5,15 @@
 	display: flex;
 	flex-direction: column;
 	gap: var(--size-spacing-15);
-	width:100%;
+	width: 100%;
 	padding: var(--size-spacing-15);
+}
+
+
+/* * */
+/* ROW */
+
+.row {
+	height: 50px;
+	border-radius: 999px;
 }
