--- a/frontend/components/home/QuickSearchFavoritesBar/styles.module.css
+++ b/frontend/components/home/QuickSearchFavoritesBar/styles.module.css
@@ -2,13 +2,13 @@
 /* CONTAINER */
 
 .container {
-	padding: var(--size-spacing-20);
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 	display: flex;
 	flex-direction: row;
+	gap: var(--size-spacing-15);
 	align-items: center;
 	justify-content: flex-start;
-	gap: var(--size-spacing-15);
+	padding: var(--size-spacing-20);
+	border-bottom: 1px solid rgb(0 0 0 / 10%);
 }
 
 /* * */
@@ -17,20 +17,20 @@
 .emptyMessage {
 	font-size: 14px;
 	font-weight: var(--font-weight-medium);
+	line-height: 1;
 	color: var(--color-primary-black);
 	opacity: 0.2;
-	line-height: 1;
 }
 
 /* * */
 /* MORE */
 
 .more {
+	margin-left: 3px;
 	font-size: 16px;
 	font-weight: var(--font-weight-semibold);
-	color: var(--color-primary-black);
 	line-height: 1;
-	margin-left: 3px;
+	color: var(--color-primary-black);
 }
 
 .more:hover {
