--- a/frontend/components/alerts/AlertsListToolbar/styles.module.css
+++ b/frontend/components/alerts/AlertsListToolbar/styles.module.css
@@ -8,9 +8,11 @@
 }
 
 .selectsWrapper {
+	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: var(--size-spacing-15);
+	justify-content: stretch;
 }
 
 
