--- a/frontend/components/header/Header/styles.module.css
+++ b/frontend/components/header/Header/styles.module.css
@@ -1,4 +1,3 @@
-/* * */
 
 /**
  * HEADER HEIGHT
@@ -13,19 +12,17 @@
 }
 
 /* * */
-
 /* CONTAINER */
 
 .container {
 	position: fixed;
-	top:0;
+	top: 0;
 	left: 0;
 	z-index: 100;
 	width: 100%;
 }
 
 /* * */
-
 /* MAIN WRAPPER */
 
 .mainWrapper {
@@ -34,15 +31,18 @@
 	gap: var(--size-spacing-30);
 	justify-content: space-between;
 	width: 100%;
-	max-width: var(--size-max-width-viewport);
+	max-width: calc(var(--size-max-width-viewport) + 40px);
 	height: 100%;
 	margin: auto;
 	background-color: var(--color-system-background-100);
-	border-bottom: 1px solid var(--color-system-border-100);
+	border: 1px solid var(--color-system-border-100);
+	border-top: none;
+	border-bottom-right-radius: 18px;
+	border-bottom-left-radius: 18px;
+	box-shadow: 0 0 40px 0 rgb(0 0 0 / 5%);
 }
 
 /* * */
-
 /* NAV WRAPPER */
 
 .navWrapper {
