--- a/frontend/components/layout/Section/styles.module.css
+++ b/frontend/components/layout/Section/styles.module.css
@@ -57,7 +57,10 @@
 /* CHILDREN WRAPPER */
 
 .childrenWrapper {
-	display: grid;;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
 	width: 100%;
 }
 
