--- a/frontend/components/layout/Surface/styles.module.css
+++ b/frontend/components/layout/Surface/styles.module.css
@@ -14,6 +14,7 @@
 
 .container.default {
 	background-color: var(--color-system-background-100);
+	border: 1px solid var(--color-system-border-100);
 }
 
 .container.brand {
