--- a/frontend/components/lines/LinesDetailHeader/styles.module.css
+++ b/frontend/components/lines/LinesDetailHeader/styles.module.css
@@ -4,34 +4,67 @@
 .headingSection {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
 	gap: var(--size-spacing-15);
+	align-items: flex-start;
+	justify-content: flex-start;
 }
 
 .headingSectionRow {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
-	align-items: center;
 	gap: var(--size-spacing-15);
+	align-items: center;
+	justify-content: center;
 }
 
 /* * */
 /* LINE NAME */
 
 .lineName {
-	display: flex;
-	width: 100%;
+	display: -webkit-box;
 	align-items: center;
 	justify-content: flex-start;
-	color: var(--color-system-text-100);
-	line-height: 1.2;
+	width: 100%;
 	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 3;
-	-webkit-box-orient: vertical;
 	font-size: 20px;
 	font-weight: var(--font-weight-bold);
+	line-height: 1.2;
+	color: var(--color-system-text-100);
+	text-overflow: ellipsis;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
+}
+
+
+
+/* * */
+/* CONTAINER */
+
+.container {
+	display: grid;
+	grid-template-columns: auto 1fr;
+	gap: var(--size-spacing-10) var(--size-spacing-20);
+	align-items: center;
+	justify-content: center;
+}
+
+@media screen and (width <= 900px) {
+
+	.container {
+		grid-template-columns: 1fr;
+	}
+}
+
+/* * */
+/* PATTERN SELECTOR EXPLAINER WRAPPER */
+
+.patternSelectorExplainerWrapper {
+	justify-self: flex-end;
+}
+
+@media screen and (width <= 900px) {
+
+	.patternSelectorExplainerWrapper {
+		margin-top: var(--size-spacing-20);
+	}
 }
