--- a/frontend/components/stores/StoresList/styles.module.css
+++ b/frontend/components/stores/StoresList/styles.module.css
@@ -7,6 +7,7 @@
 		"a b" minmax(300px, auto) / 1fr 1fr;
 	align-items: flex-start;
 	justify-content: flex-start;
+	width: 100%;
 }
 
 @media screen and (width <= 900px) {
