--- a/frontend/components/alerts/AlertsDetail/styles.module.css
+++ b/frontend/components/alerts/AlertsDetail/styles.module.css
@@ -3,12 +3,10 @@
 
 .infoBar {
 	display: flex;
-	flex-direction: row;
+	flex-flow: row wrap;
+	gap: var(--size-spacing-20);
 	align-items: center;
 	justify-content: flex-start;
-	gap: var(--size-spacing-20);
-	padding-top: var(--size-spacing-15) !important;
-	flex-wrap: wrap;
 }
 
 /* * */
@@ -17,10 +15,10 @@
 .contentWrapper {
 	display: flex;
 	flex-direction: column;
+	gap: var(--size-spacing-20);
 	align-items: flex-start;
 	justify-content: flex-start;
-	gap: var(--size-spacing-20);
-	max-width: var(--size-width-heading);
+	max-width: var(--size-max-width-text);
 	min-height: 250px;
 }
 
@@ -29,9 +27,9 @@
 /* DESCRIPTION */
 
 .description {
-	line-height: 1.6;
 	font-size: 18px;
 	font-weight: var(--font-weight-text);
+	line-height: 1.6;
 	color: var(--color-system-text-100);
 }
 
@@ -40,6 +38,6 @@
 
 .image {
 	overflow: hidden;
-	border-radius: 5px;
 	border: 1px solid var(--color-system-border-200);
+	border-radius: 5px;
 }
