--- a/frontend/components/common/AlertsCarousel/styles.module.css
+++ b/frontend/components/common/AlertsCarousel/styles.module.css
@@ -1,24 +1,14 @@
 /* * */
-/* CONTAINER */
-
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: var(--size-spacing-10);
-    padding-top: var(--size-spacing-20);
-    background: var(--color-status-info-background);
-}
-
-/* * */
 /* HEADING WRAPPER */
 
 .headingWrapper {
 	display: flex;
 	flex-direction: row;
-    align-items: center;
-    padding: 0px var(--size-spacing-20);
     gap: var(--size-spacing-10);
-    color: var(--color-status-info-text);
+    align-items: center;
+    padding: var(--size-spacing-20);
+	padding-bottom: 0;
     font-size: 18px;
     font-weight: var(--font-weight-bold);
+    color: var(--color-status-info-text);
 }
