--- a/frontend/components/header/Header/styles.module.css
+++ b/frontend/components/header/Header/styles.module.css
@@ -1,45 +1,29 @@
-
-/**
- * HEADER HEIGHT
- * Header must have fixed height to make it easier to
- * center elements inside it, allow for full height menus
- * and compensate for the fixed positioning.
- */
-
-.spacer {
-	display: block;
-	height: var(--size-height-header);
-}
-
 /* * */
 /* CONTAINER */
 
 .container {
-	position: fixed;
+	position: sticky;
 	top: 0;
-	left: 0;
 	z-index: 100;
-	width: 100%;
-}
-
-/* * */
-/* MAIN WRAPPER */
-
-.mainWrapper {
 	display: flex;
 	flex-direction: row;
 	gap: var(--size-spacing-30);
 	justify-content: space-between;
 	width: 100%;
-	max-width: calc(var(--size-max-width-viewport) + 40px);
-	height: 100%;
-	margin: auto;
+	margin-top: 20px;
 	background-color: var(--color-system-background-100);
 	border: 1px solid var(--color-system-border-100);
-	border-top: none;
-	border-bottom-right-radius: 18px;
-	border-bottom-left-radius: 18px;
-	box-shadow: 0 0 40px 0 rgb(0 0 0 / 5%);
+	border-radius: 18px;
+	transition: all 400ms ease;
+}
+
+.container.isSticky {
+	width: calc(100% + 40px);
+	border-top-color: transparent;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+	box-shadow: 0 0 40px 0 rgb(0 0 0 / 7%);
+	transform: translate(-20px, 0);
 }
 
 /* * */
