--- a/frontend/components/header/Header/styles.module.css
+++ b/frontend/components/header/Header/styles.module.css
@@ -7,13 +7,13 @@
 	z-index: 100;
 	display: flex;
 	flex-direction: row;
-	gap: var(--size-spacing-30);
+	gap: var(--size-spacing-20);
 	justify-content: space-between;
 	width: 100%;
 	margin-top: 20px;
 	background-color: var(--color-system-background-100);
 	border: 1px solid var(--color-system-border-100);
-	border-radius: 18px;
+	border-radius: var(--border-radius-lg);
 	transition: all 400ms ease;
 }
 
@@ -24,6 +24,19 @@
 	border-top-right-radius: 0;
 	box-shadow: 0 0 40px 0 rgb(0 0 0 / 7%);
 	transform: translate(-20px, 0);
+}
+
+@media screen and (width <= 500px) {
+	.container,
+	.container.isSticky {
+		width: 100%;
+		margin: 0;
+		border: none;
+		border-bottom: 1px solid var(--color-system-border-100);
+		border-radius: 0;
+		box-shadow: none;
+		transform: none;
+	}
 }
 
 /* * */
