--- a/frontend/components/layout/Grid/styles.module.css
+++ b/frontend/components/layout/Grid/styles.module.css
@@ -39,3 +39,24 @@
 .container.abcd {
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 }
+
+@media screen and (width <= 500px) {
+	.container.a {
+		grid-template-columns: 1fr;
+	}
+	.container.aab {
+		grid-template-columns: 1fr;
+	}
+	.container.ab {
+		grid-template-columns: 1fr;
+	}
+	.container.abb {
+		grid-template-columns: 1fr;
+	}
+	.container.abc {
+		grid-template-columns: 1fr;
+	}
+	.container.abcd {
+		grid-template-columns: 1fr;
+	}
+}
