--- a/frontend/components/home/SchedulesSection/styles.module.css
+++ b/frontend/components/home/SchedulesSection/styles.module.css
@@ -4,3 +4,15 @@
 .gridNav {
 	grid-template-columns: repeat(4, 1fr);
 }
+
+@media screen and (width <= 900px) {
+	.gridNav {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
+@media screen and (width <= 650px) {
+	.gridNav {
+		grid-template-columns: 1fr;
+	}
+}
