--- a/frontend/components/home/SupportSection/styles.module.css
+++ b/frontend/components/home/SupportSection/styles.module.css
@@ -4,3 +4,9 @@
 .gridNav {
 	grid-template-columns: repeat(2, 1fr);
 }
+
+@media screen and (width <= 650px) {
+	.gridNav {
+		grid-template-columns: 1fr;
+	}
+}
