--- a/frontend/components/layout/RegularListItem/styles.module.css
+++ b/frontend/components/layout/RegularListItem/styles.module.css
@@ -26,7 +26,7 @@
 	border-bottom: none;
 }
 
-@media (width <= 500px) {
+@media screen and (width <= 650px) {
 	.container,
 	.container:hover,
 	.container:active {
