--- a/frontend/components/viewport/WebsiteViewport/styles.module.css
+++ b/frontend/components/viewport/WebsiteViewport/styles.module.css
@@ -6,11 +6,13 @@
 	flex-direction: column;
 	gap: var(--size-spacing-20);
 	max-width: var(--size-max-width-viewport);
+	padding: var(--size-spacing-20);
 	margin: auto;
 }
 
-@media screen and (width <= 500px) {
+@media screen and (width <= 650px) {
 	.container {
+		padding: 0;
 		margin-top: -20px;
 	}
 }
