--- a/frontend/components/header/Header/styles.module.css
+++ b/frontend/components/header/Header/styles.module.css
@@ -10,7 +10,6 @@
 	gap: var(--size-spacing-20);
 	justify-content: space-between;
 	width: 100%;
-	margin-top: 20px;
 	background-color: var(--color-system-background-100);
 	border: 1px solid var(--color-system-border-100);
 	border-radius: var(--border-radius-lg);
@@ -18,7 +17,7 @@
 }
 
 .container.isSticky {
-	width: calc(100% + 40px);
+	width: calc(100% + var(--size-spacing-20) + var(--size-spacing-20));
 	border-top-color: transparent;
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
@@ -26,15 +25,19 @@
 	transform: translate(-20px, 0);
 }
 
-@media screen and (width <= 500px) {
+@media screen and (width <= 1200px) {
+	.container.isSticky {
+		border-color: transparent;
+		border-bottom-color: var(--color-system-border-100);
+		border-radius: 0;
+		box-shadow: none;
+	}
+}
+
+@media screen and (width <= 650px) {
 	.container,
 	.container.isSticky {
 		width: 100%;
-		margin: 0;
-		border: none;
-		border-bottom: 1px solid var(--color-system-border-100);
-		border-radius: 0;
-		box-shadow: none;
 		transform: none;
 	}
 }
