--- a/frontend/components/layout/Grid/styles.module.css
+++ b/frontend/components/layout/Grid/styles.module.css
@@ -40,10 +40,25 @@
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-@media screen and (width <= 900px) {
-	.container.a {
-		grid-template-columns: 1fr;
+@media screen and (width <= 1000px) {
+	.container.aab {
+		grid-template-columns: 1fr 1fr;
 	}
+	.container.ab {
+		grid-template-columns: 1fr 1fr;
+	}
+	.container.abb {
+		grid-template-columns: 1fr 1fr;
+	}
+	.container.abc {
+		grid-template-columns: 1fr 1fr;
+	}
+	.container.abcd {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
+@media screen and (width <= 900px) {
 	.container.aab {
 		grid-template-columns: 1fr;
 	}
@@ -62,18 +77,6 @@
 }
 
 @media screen and (width <= 650px) {
-	.container.a {
-		grid-template-columns: 1fr;
-	}
-	.container.aab {
-		grid-template-columns: 1fr;
-	}
-	.container.ab {
-		grid-template-columns: 1fr;
-	}
-	.container.abb {
-		grid-template-columns: 1fr;
-	}
 	.container.abc {
 		grid-template-columns: 1fr;
 	}
