--- a/frontend/themes/_default/styles/variables.css
+++ b/frontend/themes/_default/styles/variables.css
@@ -127,6 +127,8 @@
 	/* * */
 	/* COLOR / SOCIAL */
 
+	--color-social-apple: #973999;
+	--color-social-android: #3ddc84;
 	--color-social-facebook: #4267B2;
 	--color-social-instagram: #E1306C;
 	--color-social-twitter: #1DA1F2;
