--- a/frontend/components/stops/StopsDetailContent/styles.module.css
+++ b/frontend/components/stops/StopsDetailContent/styles.module.css
@@ -7,6 +7,7 @@
 		"a b" minmax(300px, auto) / 1fr 1fr;
 	align-items: flex-start;
 	justify-content: flex-start;
+	width: 100%;
 	min-height: 100vh;
 }
 
