--- a/frontend/components/home/MetricsSection/styles.module.css
+++ b/frontend/components/home/MetricsSection/styles.module.css
@@ -22,6 +22,37 @@
 
 /* * */
 
+.mobileContainer {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+
+	& .today {
+		border: 0;
+		height: 220px;
+	}
+	
+	& .ytd {
+		margin-top: -30px;
+		height: 220px;
+	}
+	
+	& .byLine {
+		margin-top: -30px;
+		z-index: 10;
+	}
+}
+
+.cardContainer {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.1);
+	border-radius: var(--border-radius-lg);
+}
+
+
+
 /* GO TO METRICS */
 
 .goToMetrics {
