--- a/frontend/components/metrics/MetricsCardToday/styles.module.css
+++ b/frontend/components/metrics/MetricsCardToday/styles.module.css
@@ -4,10 +4,12 @@
 .container {
 	overflow: hidden;
 	width: 100%;
-	border-radius: 5px;
+	border-radius: 18px;
 	border: 1px solid var(--color-system-border-100);
 	background-color: var(--color-system-background-100);
+	box-shadow: var(--box-shadow-lg);
 	position: relative;
+	color: var(--color-system-text-300);
 }
 
 /* * */
@@ -37,20 +39,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
-	gap: var(--size-spacing-20);
-}
-
-/* * */
-/* REALTIME VALUE WRAPPER ITEM */
-.realtimeValueWrapperItem {
-	position: relative;
-	opacity: 0.5;
-	cursor: pointer;
-	transition: opacity 0.5;
-
-	&.selected {
-		opacity: 1;
-	}
+	gap: var(--size-spacing-5);
 }
 
 /* * */
@@ -59,7 +48,8 @@
 .value {
 	line-height: 1;
 	font-weight: var(--font-weight-extrabold);
-	color: var(--color-status-info-text);
+	color: var(--color-brand);
+	/* text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1); */
 }
 
 .primary .value {
@@ -74,7 +64,7 @@
 /* LABEL */
 
 .label {
-	color: var(--color-system-text-100);
+	color: var(--color-system-text-300);
 	font-weight: var(--font-weight-bold);
 }
 
@@ -92,7 +82,6 @@
 .graphWrapper {
 	width: 100%;
 	z-index: 1;
-	opacity: 0.75;
 	margin: -5px; /* Fixed margins set by Recharts */
 	width: calc(100% + 10px); /* Fixed margins set by Recharts */
 }
