--- a/frontend/components/metrics/MetricsCardYearToDate/styles.module.css
+++ b/frontend/components/metrics/MetricsCardYearToDate/styles.module.css
@@ -4,9 +4,9 @@
 .container {
 	overflow: hidden;
 	width: 100%;
-	border-radius: 5px;
-	border: 1px solid var(--color-system-border-100);
-	background-color: var(--color-system-background-100);
+	border-radius: 18px;
+	background-color: var(--color-brand);
+	box-shadow: var(--box-shadow-lg);
 	position: relative;
 }
 
@@ -46,7 +46,7 @@
 .value {
 	line-height: 1;
 	font-weight: var(--font-weight-extrabold);
-	color: var(--color-status-info-text);
+	color: var(--color-primary-black);
 }
 
 .primary .value {
@@ -61,7 +61,8 @@
 /* LABEL */
 
 .label {
-	color: var(--color-system-text-100);
+	color: var(--color-primary-black);
+	opacity: 0.6;
 	font-weight: var(--font-weight-bold);
 }
 
@@ -79,7 +80,7 @@
 .graphWrapper {
 	width: 100%;
 	z-index: 1;
-	opacity: 0.5;
+	opacity: 0.9;
 	margin: -5px; /* Fixed margins set by Recharts */
 	width: calc(100% + 10px); /* Fixed margins set by Recharts */
 }
@@ -96,7 +97,8 @@
 	width: 18px;
 	height: 18px;
 	z-index: 3;
-	color: var(--color-system-text-400);
+	color: var(--color-primary-black);
+	opacity: 0.6;
 }
 
 .popoverText,
