--- a/frontend/components/common/Card/styles.module.css
+++ b/frontend/components/common/Card/styles.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid var(--color-system-border-100);
+    border-radius: var(--border-radius-lg);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     padding: 10px;
 }
