--- a/frontend/components/common/Card/styles.module.css
+++ b/frontend/components/common/Card/styles.module.css
@@ -2,6 +2,7 @@
 .card {
     display: flex;
     flex-direction: column;
+    background-color: var(--color-system-background-100);
     border: 1px solid var(--color-system-border-100);
     border-radius: var(--border-radius-lg);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
