--- a/frontend/components/metrics/MetricsCardToday/styles.module.css
+++ b/frontend/components/metrics/MetricsCardToday/styles.module.css
@@ -48,7 +48,7 @@
 .value {
 	line-height: 1;
 	font-weight: var(--font-weight-extrabold);
-	color: var(--color-primary-black);
+	color: var(--color-system-text-100);
 }
 
 .primary .value {
